<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.muni.comingtonight.activity.MainActivity"
    >

    <ImageView
        android:id="@+id/posterImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/movie_background"
        android:scaleType="centerCrop"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/activityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/default_movie_title"
                android:padding="8dp"
                android:background="@color/blackTransparent"
                />

            <TextView
                android:id="@+id/activityRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/activityName"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/default_rating"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:background="@color/blackTransparent"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:background="@color/blackTransparent">

            <CheckBox
                android:id="@+id/attendedCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                android:text="@string/attended"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                />

            <Button
                android:id="@+id/navigateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_navigate"
                android:text="@string/navigate"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:id="@+id/program"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="6dp"
                android:text="@string/default_program"
                android:textColor="@color/white"
                android:textSize="24sp" />
            </RelativeLayout>

            <android.support.design.widget.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemBackground="@color/colorPrimary"
                app:itemIconTint="@color/white"
                app:itemTextColor="@color/white"
                app:menu="@menu/bottom_main_menu" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
